fix button text alignment in footer

--- a/scss/imports/_footer.scss
+++ b/scss/imports/_footer.scss
@@ -8,6 +8,7 @@ footer {
  div {
    display: flex;
    justify-content: center;
+   align-items: center;
    padding-top: 80px;
 
    a {
